--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nxrocks/nx-flutter": "^5.0.0",
     "nx": "15.0.13",
     "prettier": "^2.6.2"
   },
